decal-macros/tests/ui/fail/sub_scene_invalid_args.rs
use decal::decal;

fn main() {
    let _ = decal! {
        Scene()
    };

    let _ = decal! {
        Scene(1, 2)
    };
}
